# Bp_prediction_recommendation_system

./: .env  .gitignore  README.md  bp_terminal_pipeline.py  package-lock.json  package.json  requirements.txt  server.js
Public/: app.py  main.py
Uploads/Bp_prediction_recommendation_system/Public/: pyproject.toml
Uploads/Bp_prediction_recommendation_system/Public/static/css/: styles.css
Uploads/Bp_prediction_recommendation_system/Public/static/js/: bp-prediction.js  face-detection.js  main.js  recording.js  result.js  rppg.js
Uploads/Bp_prediction_recommendation_system/Public/templates/: index.html  results.html
model/: predict_bp.py
temp/: rppg_1749845885214.csv  rppg_1749845889280.csv  rppg_1749845893542.csv  rppg_1749845897534.csv  rppg_1749845901248.csv  rppg_1749845904918.csv  rppg_1749845908370.csv  rppg_1749845912054.csv  rppg_1749845916137.csv  rppg_1749845920152.csv  rppg_1749845924470.csv  rppg_1749845929723.csv  rppg_1749845935226.csv  rppg_1749845940723.csv  rppg_1749845946286.csv  rppg_1749845951264.csv  rppg_1749845956207.csv  rppg_1749845958450.csv  rppg_1749845960782.csv  rppg_1749845962894.csv  rppg_1749845965217.csv  rppg_1749845967609.csv  rppg_1749845970198.csv  rppg_1749845973225.csv  rppg_1749845979031.csv  rppg_1749845984632.csv  rppg_1749845990104.csv  rppg_1749845996202.csv  rppg_1749846000764.csv  rppg_1749846002854.csv  rppg_1749846004948.csv  rppg_1749846007014.csv  rppg_1749846009185.csv  rppg_1749846011354.csv  rppg_1749846013517.csv  rppg_1749846015611.csv  rppg_1749846017862.csv  rppg_1749846020044.csv  rppg_1749846022001.csv  (+161 more)
(+34 files in other folders)
